Grand update
Got new PC and after 10 monts installed GitHub